premiers plots et questions de CV

--- a/rapport.tex
+++ b/rapport.tex
@@ -223,7 +223,7 @@ Ceci entraine immédiatement que les $\epsilon^n$ sont solution de la même équ
     \item Cas non homogène : pas de simulation : juste faire le calcul (je l'ai fait c'est dégueu mais izi)
     \item Cas scattering : le plus dur il faut coder les $n$ rebonds des particules : fait mais des questions sur la théorie
     \item Etudier les temps de calcul
-    \item Etudier la convergence ($\sqrt{N}$ théoriquement)
+    \item Etudier la convergence ($\sqrt{N}$ théoriquement) : en quelle norme ? J'ai 1/4 pour l'instant en norme L2.
     \item Etudier la complexité ?? 
 \end{itemize}
 
