--- a/rapport.tex
+++ b/rapport.tex
@@ -15,6 +15,7 @@
 \newcommand{\pp}{\varphi}
 \newcommand{\ppt}{\tilde{\varphi}}
 \newcommand{\PP}{\mathbb{P}}
+\newcommand{\epst}{\tilde{\epsilon}}
 \newcommand{\st}{\Sigma_t}
 \newcommand{\sa}{\Sigma_a}
 \newcommand{\Ssss}{\Sigma_s}
@@ -104,7 +105,7 @@ On multiplie l'équation par $e^{\frac{\st x}{\mu}}$ et on intègre entre $0$ et
 Pour simuler ce flux neutronique avec un solveur Monte-Carlo on commence par tirer une direction de départ $\mu_0$ avec une loi uniforme $\mathcal{U}[-1,1]$.
 Le point de départ est $x_0 = 0$ puisque la seule source se trouve en ce point. Puis on tire la distance parcourue par ce neutron selon la loi du libre parcours établie précédemment. 
 Le neutron finit sa trajectoire au point $x_1$ avec toujours la direction $\mu_0$. 
-Ceci donne alors une distributions de neutrons avec une densité $f_{psi}$ égale au libre parcours.
+Ceci donne alors une distributions de neutrons avec une densité $f_{\psi}$ égale au libre parcours.
 
 \begin{equation*}
     f_{\psi}(x_1) = \frac{\st}{\mu}e^{-\frac{\st}{\mu}x_1} = \st \psi(x_1,\mu)
@@ -120,10 +121,13 @@ En prenant un intervalle de longueur $dx$ négligable devant $1$ (la taille de n
 En approximant la probabilité par la fréquence lors d'un grand nombre de tirage, nous sommes bien capables de trouver $\psi(x,\mu)$ pour tout $x$.
 
 
+
+
+
 \vspace{0.5cm}
 \subsubsection{Source uniforme}
 On s'intéresse ensuite au cas d'une source $S$ uniforme et unitaire sur tout l'intervalle $[0,1]$.
-Comme on écrit $S(x) = \int_0^1 S(t) \delta_t(t)dt$ on peut réutiliser l'étude faite avec une source ponctuelle. Cette source peut maintenant être située en tout point de l'intervalle d'étude. 
+Comme on écrit $S(x) = \int_0^1 S(t) \delta_x(t)dt$ on peut réutiliser l'étude faite avec une source ponctuelle. Cette source peut maintenant être située en tout point de l'intervalle d'étude. 
 Par translation on obtient la solution de l'équation pour une source ponctuelle en $x_0$ pour $\mu>0$
 \begin{equation}
     \label{eq:sol.point.x0}
@@ -132,7 +136,7 @@ Par translation on obtient la solution de l'équation pour une source ponctuelle
 Par symétrie on trouve la solution pour $\mu<0$ en changeant simplement l'indicatrice $1_{(x<x_0)}$.
 
 \vspace{0.1cm}
-Par linéarité la solution de notre equation pour $S=1$ 
+Par linéarité la solution de notre equation pour $S=1$ s'écrit
 \begin{equation*}
     \pp(x,\mu) = \int_0^1 \psi_{x_0}(x,\mu)\ dx_0
 \end{equation*} 
@@ -142,25 +146,25 @@ Comme la source est constante on tire $x_0$ selon une loi uniforme $\mathcal{U}[
 On tire $\mu_0$ comme précédemment.
 Pour connaitre la densité $f_{\mu_0}(x_1)$ on utilise la formule de Bayes sur les densités conditionnelles
 \begin{equation*}
-    f_{\mu_0}(x_1) = \int_0^1 f_{\mu_0}(x_1|x_0)f_{\psi,\mu_0}(x_0)\ dx_0
+    f(x_1|\mu_0) = \int_0^1 f_{\psi}(x_1|x_0,\mu_0)f_{\mu_0}(x_0)\ dx_0
 \end{equation*}
 
-$f_{\mu_0}(x_1|x_0)$ est donnée par la solution (\ref{eq:sol.point.x0}) qui est le libre parcours depuis $x_0$ à $\st$ près et $f_{\mu_0}(x_0)$ par la densité de la source, ici $1$.
+$f_{\psi}(x_1|x_0,\mu_0)$ est donnée par la solution (\ref{eq:sol.point.x0}) qui est le libre parcours depuis $x_0$ à $\st$ près et $f_{\mu_0}(x_0)$ par la densité de la source, ici $1$.
 On obtient la densité $f(x_1)$
-$$ f_{\mu_0}(x_1) = \st \int_0^1 \psi_{x_0}(x,\mu) \ dx  = \st \pp(x,\mu)$$
+$$ f(x_1|\mu_0) = \st \int_0^1 \psi_{x_0}(x,\mu) \ dx  = \st \pp(x,\mu)$$
 
 \vspace{0.1cm}
 Pour obtenir la densité de neutrons totale en un point $x$ indépendemment de leur direction $\mu$, il faut considérer les probabilités conditionnelles selon $\mu$ également.
 Comme le tirage de $\mu$ est uniforme entre $-1$ et $1$, sa densité est $\frac{1}{2}$. 
 On intègre sur $\mu$ pour obtenir la densité moyenne $ \tilde{\pp}(x) = \into \pp(x,\mu) \ d\mu $.
 On a alors
-$$ f(x_1) = \frac{1}{2} \into f_{\mu_0}(x_1) \ d\mu = \frac{\st}{2} \into \pp(x_1,\mu) \ d\mu  = \frac{\st}{2} \tilde{\pp}(x) $$
+$$ f(x_1) = \frac{1}{2} \into f(x_1|\mu_0) \ d\mu_0 = \frac{\st}{2} \into \pp(x_1,\mu) \ d\mu  = \frac{\st}{2} \tilde{\pp}(x) $$
 
 Nous sommes donc capable d'approximer $\pp$ mais aussi $\tilde{\pp}$ par méthode Monte-Carlo
 
 \begin{equation}
     \label{eq:sol.unif}
-    \pp(x,\mu) = \frac{\PP(x_1 \in [x,x+dx]| \mu_0)}{\st dx} \hspace{1cm} \tilde{\pp}(x) = \frac{\PP(x_1 \in [x,x+dx])}{2 \st dx}
+    \pp(x,\mu_0) = \frac{\PP(x_1 \in [x,x+dx]| \mu_0)}{\st dx} \hspace{1cm} \tilde{\pp}(x) = \frac{\PP(x_1 \in [x,x+dx])}{2 \st dx}
 \end{equation}
 
 
@@ -209,33 +213,65 @@ Le même raisonnement donne
 \vspace{0.5cm}
 \subsection{Matériau diffusant}
 Nous abandonnons maintenant l'hypothèse d'un matériau purement absorbant et considérons les collisions ($\Ssss \neq 0$).
-Nous utilisons la suite des flux $n$ fois collisionnés $\pp^n$ et les différences entre deux itérations $\epsilon = \pp^n-\pp^{n-1}$ avec $\epsilon^0 = \pp^0$.
+Nous utilisons la suite des flux $n$ fois collisionnés $\pp^n$ et les différences entre deux itérations $\epsilon^n = \pp^n-\pp^{n-1}$ avec $\epsilon^0 = \pp^0$.
 Les flux collisionnés vérifient le système
 \begin{equation}
     \label{eq:diffusion}
     \left\{ \begin{aligned}
-        \mu \frac{\partial \pp^0}{\partial x} (x,\mu) + \st \pp^0(x,\mu) &= \sa S(x,\mu)  \\
-        \mu \frac{\partial \pp^n}{\partial x} (x,\mu) + \st \pp^n(x,\mu) &= \sa S(x,\mu) + \frac{\Ssss}{2} \into \pp^{n-1}(x,\mu')\ d\mu' \hspace{1cm} \forall n \geqslant 1
+        \mu \frac{\partial \pp^0}{\partial x} (x,\mu) + \st \pp^0(x,\mu) &=  S(x,\mu)  \\
+        \mu \frac{\partial \pp^n}{\partial x} (x,\mu) + \st \pp^n(x,\mu) &=  S(x,\mu) + \frac{\Ssss}{2} \into \pp^{n-1}(x,\mu')\ d\mu' \hspace{1cm} \forall n \geqslant 1
     \end{aligned}
     \right.
 \end{equation}
+et les $\epsilon^n$ le même système sans source.
 
 Pour simplifier l'étude on considère ici que l'absorbtion est négligeable, i.e. $\st = \Ssss$ et $\sa = 0$.
-Ceci entraine immédiatement que les $\epsilon^n$ sont solution de la même équation que les $\pp^n$.
+%Ceci entraine immédiatement que les $\epsilon^n$ sont solution de la même équation que les $\pp^n$.
 
 Nous n'allons ici considérer que le flux moyenné en $\mu$, fonction uniquement de l'espace $\tilde{\pp}(x)$.
 Le flux non collisinné $\ppt^0$ est donné par la partie précédente équation (\ref{eq:sol.unif}).
 
 Nous cherchons maintenant à estimer $\ppt^1$, c'est à dire trouver la densité de probabilité d'un point $x_2$ après une collision et 2 libres parcours.
+$\epsilon^1$ est solution de 
+$$ \mu \frac{\partial \epsilon^1}{\partial x} (x,\mu) + \st \epsilon^1(x,\mu) =  \frac{\Ssss}{2} \into \pp^{0}(x,\mu')\ d\mu'= \frac{\Ssss}{2}  \ppt^{0}(x) $$
+
+On utilise encore une fois le fait que $\ppt^0(x) = \int_0^1 \ppt^0(t)\delta_x(t)\ dt$ pour obtenir par linéarité
+\begin{equation}
+    \label{eq:epsilon.1}
+    \epsilon^1(x,\mu) = \Ssss \int_0^1 \ppt^0(x_1,\mu) \psi_{x_1}(x,\mu) dx_1
+\end{equation}
+
+
+Pour mieux différencier les densités, on ajoute les indices $x$ et $\mu$ pour indiquer sur quelle variable porte la densité $f$.
+
 On utilise la formule de Bayes avec les densités qui donne (en notant $f(0\rightarrow 1)$ la densité de probabilité de continuer entre l'état 0 et l'état 1)
 \begin{align*}
-    \tilde{f_{x}}(x_2) &= f(0\rightarrow 1)\into f_{\mu}(\mu_1) \int_{-1}^1 f_x(x_2|x_1,\mu_1)\tilde{f_x}(x_1)\  dx_1 d\mu_1 \\
-    &=\frac{\Ssss}{\st}\into \frac{1}{2} \int_{-1}^1 \frac{\st}{2}\ppt^0(x_1)
+    \tilde{f_{x}}(x_2) &= f(0\rightarrow 1)\into f_{\mu}(\mu_1) \int_{0}^1 f_x(x_2|x_1,\mu_1)\tilde{f_x}(x_1)\  dx_1 d\mu_1 \\
+    &=\frac{\Ssss}{\st}\into \frac{1}{2} \int_{0}^1 f_{\psi}(x_2|x_1,\mu_1) \times\frac{\st}{2}\ppt^0(x_1) \ dx_1 d\mu_1 \\
+    &= \frac{\Ssss}{2} \into \int_{0}^1 \st \psi_{x_1}(x_2,\mu_1) \ppt^0(x_1) \ dx_1 d\mu_1 \\
+    &= \frac{\st}{2} \into \epsilon^1(x_2,\mu_1) \hspace{1cm} \text{par l'équation (\ref{eq:epsilon.1})} \\
+    &= \st \tilde{\epsilon}^1(x_2)
 \end{align*}
 
+Comme $\tilde{\epsilon}^1 = \ppt^1 - \ppt^0$, on peut directement calculer $\ppt^1$ dès qu'on a tiré les trajectoires.
+On itère pour tout $n$ et le calcul est identique puisqu'il s'agit d'un processus Markovien, l'état $n$ ne dépend que de l'état $n-1$.
+On a
+$$\ppt^n = \epst^n + \ppt^{n-1} = \sum_{k=1}^n \epst^k + \ppt^0 $$
 
+On peut donc calculer tous les flux collisinnés. Comme la solution de l'équation de transport neutronique est donnée par la limite des flux quand $n \rightarrow \infty$
+on a 
+$$\ppt(x) = \sum_{k=1}^\infty \epst^k + \ppt^0$$
 
+Dans la pratique on détermine un critère d'arrêt à $n=m$ dès que deux contributions sont 
+"suffisemment proches", i.e. dès que $\epst^m< \eta$ où $\eta$ est un paramètre 
+fixé à l'avance qui caractérise la précision de notre simulation.
 
+En intégrant sur un petit intervalle autour de $x$ on obtient une formule explicite pour calculer $\ppt$ avec une simulation Monte-Carlo
+\begin{equation}
+    \label{eq:sol.MC.diffusion}
+    \ppt(x) = \sum_{k=0}^m \frac{\PP(x_{k+1} \in [x;x+dx])}{\st dx}
+\end{equation}
+L'indice $k+1$ vient du fait que l'on note $x_k$ la position de départ de l'itération $k$ et $x_{k+1}$ sa position d'arrivée. 
 
 
 \vspace{5cm}
